# ipyscales

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  appveyor.yml  codecov.yml  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: js.yml  python.yml
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/_static/: embed-bundle.js  embed-bundle.js.map
docs/source/examples/: colorbar.nblink  colormaps.nblink  index.rst  scaled-data.nblink
examples/: Numerical Scale Editor.ipynb  colorbar.ipynb  colormaps.ipynb  introduction.ipynb  scaled-data.ipynb  scaled-values.ipynb
ipyscales/: __init__.py  _example_helper.py  _frontend.py  _version.py  color.py  colorarray.py  colorbar.py  continuous.py  datawidgets.py  linear.py  log.py  radial.py  scale.py  selectors.py  traittypes.py  value.py
ipyscales/nbextension/: __init__.py
ipyscales/tests/: conftest.py  test_color.py  test_colorarray.py  test_colorbar.py  test_continuous.py  test_datawidgets.py  test_linear.py  test_linear_scale.py  test_log.py  test_nbextension_path.py  test_selectors.py  test_values.py
js/: .npmignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/src/: continuous-editor.ts  continuous.ts  datawidgets.ts  extension.ts  index.ts  plugin.ts  radial.ts  scale.ts  selectors.ts  tsconfig.json  util.ts  utils.ts  value.ts  version.ts  widgets.ts
js/src/colormap/: colorbar.ts  (+3 more)
js/styles/: index.css  plugin.css
js/tests/: karma.conf.js  tsconfig.json
(+15 files in other folders)
