[bdist_wheel]
universal=1

[metadata]
description-file = README.md
license_file = LICENSE.txt

[manifix]
known-excludes =
    .git*
    .git/**/*
    .coveragerc
    .travis.yml
    .vscode/**/*
    appveyor.yml
    codecov.yml
    lerna-debug.log
    readthedocs.yml
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    js/coverage/**/*
    js/lib/**/*
    js/test/build/**/*
    js/package-lock.json
    js/yarn.lock
    *.egg-info
